remove unreachable URLs from tests